--- a/app/templates/mobile/visualizar_plano.html
+++ b/app/templates/mobile/visualizar_plano.html
@@ -129,7 +129,7 @@
         </div>
     </div>
     <!-- Add Procedure Modal (simplified for mobile) -->
-    <div id="addProcedureModal" class="mobile-modal" style="display: none;">
+    <div id="addProcedureModal" class="mobile-modal d-none">
         <div class="modal-content">
             <div class="modal-header">
                 <h3>Adicionar Procedimento</h3>
