--- a/app/templates/pacientes/ficha.html
+++ b/app/templates/pacientes/ficha.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
 {% block extra_js %}
     {{ super() }}
     <script nonce="{{ csp_nonce() }}">
