--- a/app/templates/users/formulario_usuario.html
+++ b/app/templates/users/formulario_usuario.html
@@ -3,7 +3,7 @@
     OdontoClinic - {{ titulo }}
 {% endblock title %}
 {% block content %}
-    {% set is_admin = current_user.cargo == 'admin' %}
+    {% set is_admin = current_user.cargo == "admin" %}
     <div class="container-fluid">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1>
