--- a/app/templates/documentos/tipos_documentos.html
+++ b/app/templates/documentos/tipos_documentos.html
@@ -122,27 +122,27 @@
                     <div class="card document-card h-100">
                         <div class="card-body d-flex flex-column text-center">
                             <!-- Ícone baseado no tipo -->
-                            {% if 'autorizacao' in tipo_id %}
+                            {% if "autorizacao" in tipo_id %}
                                 <div class="document-icon">
                                     <i class="fas fa-user-check"></i>
                                 </div>
-                            {% elif 'interrupcao' in tipo_id %}
+                            {% elif "interrupcao" in tipo_id %}
                                 <div class="document-icon">
                                     <i class="fas fa-hand-paper"></i>
                                 </div>
-                            {% elif 'exames' in tipo_id %}
+                            {% elif "exames" in tipo_id %}
                                 <div class="document-icon">
                                     <i class="fas fa-microscope"></i>
                                 </div>
-                            {% elif 'encaminhamento' in tipo_id %}
+                            {% elif "encaminhamento" in tipo_id %}
                                 <div class="document-icon">
                                     <i class="fas fa-share"></i>
                                 </div>
-                            {% elif 'instrucoes' in tipo_id %}
+                            {% elif "instrucoes" in tipo_id %}
                                 <div class="document-icon">
                                     <i class="fas fa-list-ul"></i>
                                 </div>
-                            {% elif 'contrato' in tipo_id %}
+                            {% elif "contrato" in tipo_id %}
                                 <div class="document-icon">
                                     <i class="fas fa-handshake"></i>
                                 </div>
