--- a/app/templates/mobile/aniversarios.html
+++ b/app/templates/mobile/aniversarios.html
@@ -1,4 +1,4 @@
-{% extends 'mobile/base.html' %}
+{% extends "mobile/base.html" %}
 {% block title %}
     Aniversariantes de {{ nome_mes }}
 {% endblock title %}
