--- a/app/templates/pacientes/formulario_financeiro.html
+++ b/app/templates/pacientes/formulario_financeiro.html
@@ -98,7 +98,7 @@
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
 {% block extra_js %}
     {{ super() }}
     <script>
