--- a/app/templates/users/lista_usuarios.html
+++ b/app/templates/users/lista_usuarios.html
@@ -62,7 +62,7 @@
                                                 </a>
                                                 <form action="{{ url_for('users.delete_user', user_id=usuario.id) }}"
                                                       method="post"
-                                                      style="display: inline">
+                                                      class="d-inline">
                                                     <button type="submit"
                                                             class="btn btn-sm btn-danger"
                                                             onclick="return confirm('Tem certeza que deseja excluir este usuário?');">
